src/objects/AMS_Country_Specific_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>ANG_Block_Cut_Cash_Form_of_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Cut Cash Form of Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Create_Process_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If an alert match this config, should it create a process case? (Creation is done by the ANG_RHCAlertTriggerHandler)</description>
        <label>Create Process Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Create_Sidra_Lite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls the sidra lite/ SMAP case and Change code creation action on RTS</description>
        <label>Create Sidra Lite and Parent Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Direction__c</fullName>
        <description>The direction to match with the Risk Alert inserted. Risk Alert must match Percentage and Direction to trigger actions</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UP</fullName>
                </value>
                <value>
                    <fullName>DOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_EmailTemplate_Legacy__c</fullName>
        <description>API name of the Email Template that will be sent to contacts when the risk alert is inserted. Legacy Notification is sent to all portal admins.</description>
        <label>Email Template - Legacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_EmailTemplate_NG__c</fullName>
        <description>API name of the Email Template that will be sent to contacts when the risk alert is inserted. Newgen Notification is sent to contact with access to the RHC Information portal service</description>
        <label>Email Template - Newgen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Minimum_RHC_Amount__c</fullName>
        <description>Defines a minimum RHC amount to be used in the RHC Amount calculation.</description>
        <inlineHelpText>Minimum RHC Amount</inlineHelpText>
        <label>Minimum RHC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ANG_Percentage__c</fullName>
        <description>The percentage to match with the Risk Alert inserted. Risk Alert must match Percentage and Direction to trigger actions</description>
        <label>Percentage</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_PortalNotificationTemplate__c</fullName>
        <description>Name of the notification template that will be created for the risk alert. If empty, no notification will be created. (Notifications are created for all contacts that have access to the RHC Information portal service)</description>
        <label>Portal Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_RTS_Severity__c</fullName>
        <label>RTS Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Remove_Ticketing_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls the removing Ticketing authorization action on RTS</description>
        <label>Remove Ticketing Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Send_Email_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls the email notification to the agents action on RTS</description>
        <label>Send Email To Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_notification_on_RHC_amount_update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block notification on RHC amount update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_notification_on_Risk_Status_update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block notification on Risk Status update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Class_Check__c</fullName>
        <description>Secure country/class uniqueness (workflow on creation/update)</description>
        <label>Country Class Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Create_SAAM_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if true, instruct the system to create a SAAM case when processing the alert received</description>
        <inlineHelpText>if true, creates a SAAM case when processing the alert received</inlineHelpText>
        <label>Create SAAM Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_SMAP_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If flagged, instruct the system to create a SMAP case when the alert matching direction and percentage is processed</description>
        <inlineHelpText>If flagged, instruct the system to create a SMAP case when the alert matching direction and percentage is processed</inlineHelpText>
        <label>Create SMAP Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this is true, no Push Notifications will be sent from the selected country [NewGen APP]</description>
        <inlineHelpText>When this is true, no Push Notifications will be sent from the selected country [NewGen APP]</inlineHelpText>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Template_Internal_Stakeholders__c</fullName>
        <description>API name of the Email Template that will be sent to internal stakeholders.</description>
        <inlineHelpText>API name of the Email Template that will be sent to internal stakeholders. If no value is specified, no email is sent</inlineHelpText>
        <label>Email Template - Internal Stakeholders</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDS_Alert_Type__c</fullName>
        <description>is the type of alert received by GDS Failsafe interface for which we need to specify the actions</description>
        <label>GDS Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CashlessGDSAlert</fullName>
                    <label>Cashless GDS Alert</label>
                </value>
                <value>
                    <fullName>CashGDSAlert</fullName>
                    <label>Cash GDS Alert</label>
                </value>
                <value>
                    <fullName>TAGDSAlert</fullName>
                    <label>TA GDS Alert</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>AMS Country Specific Attributes</relationshipLabel>
        <relationshipName>AMS_Country_Specific_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IEP_Model_Banking_Message__c</fullName>
        <label>IEP Model Banking Message</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irregularity_Type__c</fullName>
        <label>Irregularity Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Class__c</fullName>
        <description>C-Cargo
D-Domestic
E-External Registrars
G-General Sales Agents
K-CATO
M-Members &amp; Airlines Sales Offices
N-NISI
O-SATO
P-Passenger
S-SSI
T-TIDS
V-Travel Service Intermediaries-TSI (USA Only)
X-Handling Agents and Shipping Lines
J-Joint Vent</description>
        <label>Location Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_DGR_BR__c</fullName>
        <description>Field used to save the minimum number of DGR certifications an BRCargo agency with location class &apos;R&apos; must have.</description>
        <label>Minimum DGR BR</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_DGR_HO__c</fullName>
        <description>Field used to save the minimum number of DGR certifications an HO Cargo agency with location class &apos;R&apos; must have.</description>
        <label>Minimum DGR HO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_Count__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Months to Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Security Request</fullName>
                </value>
                <value>
                    <fullName>Adhoc review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stakeholders_email_list__c</fullName>
        <description>list of email address which will receive the notification</description>
        <inlineHelpText>The notification will be sent to the list of email address stored in this field. Separate each email with a comma (,)</inlineHelpText>
        <label>Stakeholders email list</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AMS Country Specific Attribute</label>
    <listViews>
        <fullName>Minimum_RHC_Amount</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>ANG_Minimum_RHC_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AMS_Country_Specific_Attribute__c.Minimum_RHC_Amount</value>
        </filters>
        <label>Minimum RHC Amount</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RHC_Risk_Alerts</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>ANG_Percentage__c</columns>
        <columns>ANG_Direction__c</columns>
        <columns>ANG_Create_Process_Case__c</columns>
        <columns>ANG_EmailTemplate_Legacy__c</columns>
        <columns>ANG_EmailTemplate_NG__c</columns>
        <columns>Email_Template_Internal_Stakeholders__c</columns>
        <columns>ANG_PortalNotificationTemplate__c</columns>
        <columns>ANG_Block_Cut_Cash_Form_of_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AMS_Country_Specific_Attribute__c.RHC_Risk_Alert</value>
        </filters>
        <label>RHC Risk Alerts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RTS_Risk_Alert</fullName>
        <columns>NAME</columns>
        <columns>ANG_Create_Process_Case__c</columns>
        <columns>ANG_Create_Sidra_Lite__c</columns>
        <columns>ANG_EmailTemplate_Legacy__c</columns>
        <columns>ANG_EmailTemplate_NG__c</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>ANG_Percentage__c</columns>
        <columns>ANG_Remove_Ticketing_Authority__c</columns>
        <columns>ANG_RTS_Severity__c</columns>
        <columns>ANG_Send_Email_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AMS_Country_Specific_Attribute__c.RTS_Risk_Alert_Notification</value>
        </filters>
        <label>RTS Risk Alert</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ACSA-{00000000}</displayFormat>
        <label>AMS Country Specific Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMS Country Specific Attributes</pluralLabel>
    <recordTypes>
        <fullName>DEF_LFC</fullName>
        <active>true</active>
        <label>DEF LFC</label>
    </recordTypes>
    <recordTypes>
        <fullName>DGR_Minimum_Requirements</fullName>
        <active>true</active>
        <label>DGR Minimum Requirements</label>
    </recordTypes>
    <recordTypes>
        <fullName>EasyPay_Model_Config</fullName>
        <active>true</active>
        <label>EasyPay Model Config</label>
    </recordTypes>
    <recordTypes>
        <fullName>IRRS_LFC</fullName>
        <active>true</active>
        <label>IRRS LFC</label>
    </recordTypes>
    <recordTypes>
        <fullName>IRR_CPE</fullName>
        <active>true</active>
        <label>IRR CPE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Irregularities_for_FS_Request</fullName>
        <active>true</active>
        <label>Irregularities for FS Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Irregularity_Threshold</fullName>
        <active>true</active>
        <label>Irregularity Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>Minimum_RHC_Amount</fullName>
        <active>true</active>
        <description>Record type to associate the Minimum RHC amount page layout.</description>
        <label>Minimum RHC Amount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opt_out_at_Accreditation</fullName>
        <active>true</active>
        <description>Financial Assessment opt-out configuration</description>
        <label>Opt out at Accreditation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Push_Notification</fullName>
        <active>true</active>
        <label>Push Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>RHC_Risk_Alert</fullName>
        <active>true</active>
        <label>RHC Risk Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTS_Risk_Alert_Notification</fullName>
        <active>true</active>
        <label>RTS Risk Alert Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>RiskAlertGDS</fullName>
        <active>true</active>
        <description>used by Cashless failsafe GDS Alerts</description>
        <label>Risk Alert GDS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk_Notification</fullName>
        <active>true</active>
        <label>Risk Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ULD_Minimum_Requirements</fullName>
        <active>true</active>
        <description>Minimum requirements used for AMS Agency Regulation with type ULD</description>
        <label>ULD Minimum Requirements</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Irregularity_Threshold_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Irregulatiry Threshold&apos;
&amp;&amp;
OR(
    ISBLANK(Threshold__c),
    ISPICKVAL(Location_Class__c, &apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Please inform the location class and threshold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RTS_Notification_Severity_not_empty</fullName>
        <active>true</active>
        <description>RTS Notification- RTS Severity must be selected for RTS Risk alert notification records</description>
        <errorConditionFormula>RecordType.DeveloperName==&apos;RTS_Risk_Alert_Notification&apos; &amp;&amp; ISPICKVAL(ANG_RTS_Severity__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>ANG_RTS_Severity__c</errorDisplayField>
        <errorMessage>RTS Severity not selected. Please select one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Alert_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;RHC_Risk_Alert&apos; &amp;&amp;
OR(
  ISBLANK(TEXT(ANG_Direction__c)),
  ISBLANK(ANG_Percentage__c)
)</errorConditionFormula>
        <errorMessage>For Risk Alert attributes you must fill both Direction AND Percentage</errorMessage>
    </validationRules>
</CustomObject>